# 2semestry

lab/lab1/: CMakeLists.txt  lab1.cpp
lab/lab2/: CMakeLists.txt  lab2.cpp
lab/lab3/: lab3.cpp
lab/lab4/: lab4.cpp
lab/lab7/: lab7.cpp
lab/lab8/: lab8.cpp
practice/1practice/: CmakeLists.txt  practice1.cpp
practice/2practice/: 2semestry_practice2.cpp  CmakeLists.txt  practice2.cpp
practice/3practice/: CMakeLists.txt  practice3.cpp
practice/4practice/: CMakeLists.txt  practice4.cpp
